typescript/checker/tests/conformance/es6/modules/exportsAndImports1-amd.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            438,
        ),
        hi: BytePos(
            490,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/es6/modules",
    src: Atom('./t1' type=inline),
}
  --> $DIR/tests/conformance/es6/modules/exportsAndImports1-amd.ts:33:1
   |
33 | import { v, f, C, I, E, D, M, N, T, a } from "./t1";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

